test/files/neg/interop_abstypetags_arenot_manifests.scala
import scala.reflect.runtime.universe._

object Test extends App {
  def weakTypeTagIsnotManifest[T: WeakTypeTag] = {
    println(manifest[T])
  }

  weakTypeTagIsnotManifest[Int]
  weakTypeTagIsnotManifest[String]
  weakTypeTagIsnotManifest[Array[Int]]
}